Fixed vertical alignment for blocks, grid order applied, faq moz & saf prefixes

--- a/style.sass
+++ b/style.sass
@@ -3,23 +3,10 @@ $secondary_color: #92979F
 $font_family_alt: adonis-web, serif
 $font_family: 'Playfair Display', serif
 
-
 *
   box-sizing: border-box
   margin: 0
   padding: 0
-
-//  EACH solution lacks line-height values
-//
-// @each $heading, $size in (h1: 4rem, h2: 2.4rem, h3: 1.5rem, h4: 1.25rem , h5: 1rem, h6: 1 rem)
-//   #{$heading}
-//       font-size: $size
-//       line-height: 1.2
-//       font-weight: 300
-//       color: #fff
-//       font-family: $font_family
-//       margin: 0
-
 
 $h-size: 4rem, 2.4rem, 1.5rem, 1.25rem, 1rem, 1rem
 $h-line-height: 1.1, 1.1, 1.4, 1.4, 1.6, 1.6
@@ -39,7 +26,6 @@ body
   font-size: 1rem
   line-height: 1.5rem
 
-
 .container
   display: grid
   grid-template-columns: repeat(4, 1fr)
@@ -47,7 +33,6 @@ body
   padding: 1rem
   max-width: 1200px
   margin: 0 auto
-
 
 .homepage_bg
   background-image: url('')
@@ -75,7 +60,6 @@ body
 
 .navigation
   justify-self: center
-  // align-self: start
   // TODO: fix margin from navigation to content, fix logo position
   grid-column: span 4
   margin: 1.4rem 0
@@ -98,26 +82,24 @@ body
     &:hover
       color: #fff
 
-
 .hero
   &_image
-    margin: 2rem 0
     grid-column: span 2
-    background: url('./img/veronika.png') center center no-repeat
-    height: 70vh
-    min-height: 500px
     background-size: contain
     display: none
+    background-color: green
     @media (min-width: 720px)
       display: block
+      max-width: 500px
+      align-self: center
+    img
+      width: 100%
   &_content
     grid-column: span 4
+    background-color: red
+    align-self: center
     @media (min-width: 720px)
       grid-column: span 2
-      margin-top: 2rem
-    @media (min-width: 1000px)
-      // TODO: fix centered vertical alignment without multiple marings
-      margin-top: 4rem
     h1
       margin-bottom: 1.5rem
       text-align: center
@@ -145,13 +127,11 @@ body
       vertical-align: middle
       padding: 4rem 6rem 0
       background: url('./img/promo.png') center center no-repeat
-
     h3
       margin-bottom: 2rem
       // color: orange
     p
       // color: white
-
 
 .card
   grid-column: span 4
@@ -162,7 +142,6 @@ body
   color: #fff
   @media (min-width: 720px)
     grid-column: span 2
-
 
 // TODO: Background-size: cover, keep it dry.
 
@@ -208,26 +187,13 @@ body
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .3)), url('https://source.unsplash.com/collection/781477/4') center center no-repeat
     background-size: cover
 
-// FAQ CSS GRID BASED
-//
-// .faq
-//   grid-column: span 4
-//   background-color: lightblue
-//   border-radius: .375rem
-//   padding: 1rem
-//   @media (min-width: 720px)
-//     grid-column: span 2
-//   &_question
-//     border-bottom: 1px solid grey
-//     padding-bottom: 1rem
-//   &_answer
-//     color: black
-
 .faq
   &_container
     grid-column: span 4
     column-count: 1
     column-gap: 1rem
+    -webkit-column-fill: balance
+    -moz-column-fill: balance
     column-fill: balance
     @media (min-width: 600px)
       column-count: 2
@@ -235,10 +201,13 @@ body
       column-count: 4
   &_card
      border-radius: .375rem
+     -webkit-break-inside: avoid
+     page-break-inside: avoid
      break-inside: avoid
      padding: 1rem
      margin-bottom: 1rem
      background-color: lightgrey
+     display: inline-block
   &_question
     border-bottom: 1px solid rgba(255, 255, 255, .2)
     padding-bottom: 1rem
@@ -249,36 +218,46 @@ body
 .shoot
   &_photo
     grid-column: span 4
-    margin-bottom: 2rem
     text-align: center
+    margin-bottom: 1rem
     @media (min-width: 900px)
       grid-column: span 3
-      margin-bottom: 10rem
+      margin-bottom: 4rem
     img
       width: 100%
       max-width: 900px
     &_full
       grid-column: span 4
-      margin-bottom: 3rem
+      margin-bottom: 6rem
       img
         width: 100%
         max-width: 1400px
   &_description
     grid-column: span 4
     align-self: center
-    vertical-align: middle
-    margin-bottom: 2rem
+    background-color: red
     padding-left: 1rem
     background-image: url('./img/quotes.png')
     // TODO: change png to svg
     background-position: 0 0
     background-repeat: no-repeat
     padding-top: .5rem
+    margin-bottom: 5rem
     @media (min-width: 900px)
       grid-column: span 1
-      margin-bottom: 0
+      margin-bottom: 2rem
   &_testimonial
   &_team
+  &_divider
+    height: 1rem
+    grid-column: span 4
+    @media (min-width: 900px)
+      height: 4rem
+      grid-column: span 4
+  &_hr
+    margin: 5rem 0
+    grid-column: span 4
+
 
 a
   text-decoration: none
@@ -296,17 +275,45 @@ a
   @media (min-width: 900px)
     margin: 3rem 0 4rem
 
+// TODO: fix order issues without army of extra classes
+
+.o1
+  order: 1
+
+.o2
+  order: 2
 
 .o3
+  order: 3
+  @media (max-width: 900px)
+    order: 4
+
+.o4
+  order: 4
   @media (max-width: 900px)
     order: 3
 
-.o4
-  @media (max-width: 900px)
-    order: 2
-
 .o5
   order: 5
+
+.o6
+  order: 6
+
+.o7
+  order: 7
+
+.o8
+  order: 8
+  @media (max-width: 900px)
+    order: 9
+
+.o9
+  order: 9
+  @media (max-width: 900px)
+    order: 8
+
+.o10
+  order: 10
 
 
 .text-secondary
